# MinecraftClone1

./: .gitignore  CMakeLists.txt  README.md  gitignore
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
